--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,10 +47,9 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.13.1",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/user-event": "^7.1.2",
     "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.1.2",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
@@ -58,6 +58,7 @@
     "eslint-plugin-react": "^7.19.0",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.8",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1"
   }
 }
