--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "redux": "^4.0.5"
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
